// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingForm should match snapshot if there is a userRating 1`] = `
"<section className=\\"rating-form\\">
  <select name=\\"rating\\" onChange={[Function: onChange]}>
    <option value=\\"\\">
      --Rate--
    </option>
    <option value={1}>
      1
    </option>
    <option value={2}>
      2
    </option>
    <option value={3}>
      3
    </option>
    <option value={4}>
      4
    </option>
    <option value={5}>
      5
    </option>
    <option value={6}>
      6
    </option>
    <option value={7}>
      7
    </option>
    <option value={8}>
      8
    </option>
    <option value={9}>
      9
    </option>
    <option value={10}>
      10
    </option>
  </select>
  <button id=\\"update-btn\\" className=\\"rating-btn\\" onClick={[Function]}>
    Update
  </button>
</section>"
`;

exports[`RatingForm should match snapshot if there is no userRating 1`] = `
"<section className=\\"rating-form\\">
  <select name=\\"rating\\" onChange={[Function: onChange]}>
    <option value=\\"\\">
      --Rate--
    </option>
    <option value={1}>
      1
    </option>
    <option value={2}>
      2
    </option>
    <option value={3}>
      3
    </option>
    <option value={4}>
      4
    </option>
    <option value={5}>
      5
    </option>
    <option value={6}>
      6
    </option>
    <option value={7}>
      7
    </option>
    <option value={8}>
      8
    </option>
    <option value={9}>
      9
    </option>
    <option value={10}>
      10
    </option>
  </select>
  <button id=\\"submit-btn\\" className=\\"rating-btn\\" onClick={[Function]}>
    Update
  </button>
</section>"
`;
